# elm-implied-volatility-modelling

./: .gitignore  README.md  RealOptionDataVal.py  implied_volatility_surface_pseudocode.md  pyproject.toml  requirements.txt
data/: biases.csv  input_weights.csv  options_data_20k.csv  output_weights.csv  training_data_n100000_call_cos_implied_volatility_y.csv  training_data_n100000_call_cos_y.csv  training_data_n10000_call_cos_X.csv  training_data_n10000_call_cos_y.csv  training_data_n20000_call_cos_X.csv  training_data_n20000_call_cos_y.csv  training_data_n50000_call_cos_y.csv
docs/: PROJECTOUTLINE.md
experiments/: benchmark_elm.py
notebooks/: 01_basic_elm_usage.ipynb  02_heston_model_and_pricing.ipynb  03_elm_pricing_framework.ipynb
src/elm/data/: __init__.py  loader.py  surface_data_generator.py
src/elm/models/core/: elm_base.py  elm_incremental.py  surface_regularised_elm.py
src/elm/models/pricing/: __init__.py  elm_pricer.py  surface_elm_pricer.py
src/elm/models/pricing/methods/: black_scholes.py  cos.py  fourier.py  monte_carlo.py
src/elm/models/pricing/models/: heston.py  test.py
src/elm/visualisation/: plotting.py  surfacemodelling.py
src/elm_quantitative_finance.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  training_large_elm.py
tests/pricing/: test_cos.py  test_elm_pricer.py  test_fourier.py  test_heston.py  test_mc.py
