[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elm-quantitative-finance"
version = "0.1.0"
authors = [{name = "Leo Mullins"}]
description = "ELM reproduction study of Cheng et al. 2025"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.4.0",
    "pandas>=1.3.0",
    "seaborn>=0.11.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "black", "flake8", "mypy"]
docs = ["mkdocs", "mkdocs-material"]
all = ["quantlib", "tensorflow"]

[tool.setuptools]
package-dir = {"" = "src"}
packages = {find = {where = ["src"]}}

[tool.setuptools.package-data]
"*" = ["data/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.black]
line-length = 100
target-version = ['py38']
